# RuASR-service

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  on_pr.yaml
bot/: __main__.py  requirements.txt  server.py  utils.py
docker/bot/: .dockerignore  Dockerfile.bot
docker/inference-server/: .dockerignore  Dockerfile.inference-server
docker/webui/: Dockerfile.webui
inference_server/: __main__.py  model.py  profiles.py  requirements.txt
modeling/: requirements.txt
modeling/evaluation/: run_eval.py
modeling/evaluation/benchmarks/: __init__.py  base.py  mozila.py  sber.py
tests/: conftest.py  test_inference_server.py
webui/: __main__.py
